# All changes to networkD3 are documented here.

## Version 0.2.11

- Bug fix for `igraph_to_networkD3` so that it now accepts the value attribute.
Thanks to Louis Goddard.

- Bug fix for `diagonalNetwork` when using hierarchical lists with singular
connections. Thanks to @RohdeK. 

- Fix viewbox position when rerendered in shiny. Thanks to @RohdeK.

- Added the `iterations` argument to `sankeyNetwork`, which adjusts the y-axis
positioning. Thanks to @giko45.

## Version 0.2.10

- Added the function `igraph_to_networkD3` to convert an `igraph` class object
to a list that can be used with networkD3.

- Fixed a bug where `linkColour` was not actually passed to the widget for
`diagonalNetwork` and `radialNetwork`. Thanks to Pierre Formont.

## Version 0.2.9

- `forceNetwork` now allows you to supply a vector of colours to the
`linkColour`argument. This enables the user to highlight links to specific
nodes. Thanks to Garth Tarr. 

- Minor documentation improvements.

## Version 0.2.8

- Added `NodeGroup` and `LinkGroup` parameters to `sankeyNetwork` so links
can be colourised. Thanks to Edwin de Jonge.

- `fontFamily` is now applied to legends in `forceNetwork`. Thanks to Casey
Shannon.

- Improved bounding behaviour with `forceNetwork`. Now bounds both the links and
nodes. Thanks to Koba Khitalishvili.

## Version 0.2.7

- Fixed an issue with sankey viewBox sizing.

## Version 0.2.6

- `sankeyNetwork` fully supports cycles

- `sankeyNetwork` gets same responsive sizing and better fitting introduced
in 0.2.4 for `diagonalNetwork` and `radialNetwork`.

- `sankeyNetwork` gets same full margin control introduced
in 0.2.4 for `diagonalNetwork` and `radialNetwork`.

## Version 0.2.5

- Added `chordDiagram` to show directed relationships among entities.

## Version 0.2.4

- More robust margin argument for `diagonalNetwork` and `radialNetwork` allows
for a single value or specification of `top`, `right`, `bottom`, and `left` by
named `vector` or `list`.
